# M5Stick-Launcher

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  board_map.cmake  custom_16Mb.csv  custom_4Mb.csv  custom_4Mb2.csv  custom_4Mb_noOta.csv  custom_4Mbcore.csv  custom_8Mb.csv  file.txt  index.html  parse_pio_flags.py  platformio.ini  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32p4  sdkconfig.esp32s3  sdkconfig.lilygo-t-deck-pro  sdkconfig.m5stack-cardputer
.devcontainer/: devcontainer.json
.github/workflows/: act-build-cardputer.yml  deploy.yml  main.yml
Beta/: README.md
Release/bins/: README.md
boards/CYD-2432S028/: interface.cpp  platformio.ini
boards/ESP-General/: interface.cpp  platformio.ini
boards/_New-Device-Model/: interface.cpp  platformio.ini
boards/_jsonfiles/: m5stack-cplus2.json  m5stack-tab5.json
boards/elecrow/: interface.cpp
boards/lilygo-t-deck/: interface.cpp  platformio.ini
boards/lilygo-t-deck-pro/: interface.cpp  platformio.ini
boards/lilygo-t-display-s3-amoled/: interface.cpp  platformio.ini
boards/lilygo-t-display-s3-pro/: interface.cpp  platformio.ini
boards/lilygo-t-display-s3-touch/: interface.cpp  platformio.ini
boards/lilygo-t-dongle-s3-tft/: interface.cpp  platformio.ini
boards/lilygo-t-embed-cc1101/: interface.cpp  platformio.ini
boards/lilygo-t-lora-pager/: interface.cpp  platformio.ini
boards/lilygo-t5-epaper-s3-pro/: interface.cpp  platformio.ini
boards/m5stack-cardputer/: CMakeLists.txt  interface.cpp  platformio.ini
boards/m5stack-core/: interface.cpp  platformio.ini
boards/m5stack-core2/: interface.cpp  platformio.ini
boards/m5stack-cores3/: interface.cpp  platformio.ini
boards/m5stack-cplus1_1/: interface.cpp  platformio.ini
boards/m5stack-cplus2/: interface.cpp  platformio.ini
boards/m5stack-tab5/: interface.cpp  platformio.ini
boards/marauder-mini/: interface.cpp
boards/marauder-v4og/: interface.cpp
boards/phantom/: interface.cpp  phantom.ini
boards/pinouts/: esp32.h  m5stack-tab5.h  pins_arduino.h
boards/smoochiee-board/: interface.cpp  platformio.ini
bootloader_components/main/: bootloader_start.c
components/ArduinoGFX/: CMakeLists.txt
components/RotaryEncoder/: CMakeLists.txt
components/SensorLib/: CMakeLists.txt
components/XPowersLib/: CMakeLists.txt
include/: globals.h  webFiles.h
lib/M5Stack-HTTPUpdate/src/: M5-HTTPUpdate.cpp
lib/utility/: Keyboard.cpp  Keyboard.h
main/: idf_component.yml
src/: CMakeLists.txt  display.cpp  display.h  idf_component.yml  log_wrap.c  main.cpp  massStorage.cpp  massStorage.h  mykeyboard.cpp  onlineLauncher.cpp  onlineLauncher.h  partitioner.cpp  sd_functions.cpp  sd_functions.h  settings.cpp  tft.cpp  tft.h  webInterface.cpp
src/core/: display.cpp  display.h  mykeyboard.cpp  sd_functions.cpp  settings.cpp  tft.cpp
src/util/: massStorage.cpp  partitioner.cpp  powerSave.cpp  powerSave.h
src/wifi/: onlineLauncher.cpp  webInterface.cpp
src_dummy/: main.cpp
support_files/: custom_16Mb_p4.csv  flasher.html  merge.py
